<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
   >

    <data>
        <variable
            name="viewModel"
            type="com.example.todolistproject.model.TaskViewModel" />

        <variable
            name="addFragment"
            type="com.example.todolistproject.AddFragment" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".AddFragment"
            >

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textSize="15dp"
                android:textColor="@color/black"
                android:text="@string/TASKDETAILS"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/titleName"
                android:layout_width="350dp"
                android:layout_height="55dp"
                android:layout_marginTop="24dp"
                android:hint="@string/enterthetitle"
                android:inputType="text"
                app:helperTextTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_edit_title"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:inputType="textPersonName|textNoSuggestions"
                    android:maxLines="1"
                    android:text="@={viewModel.title}"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:text="@string/DUEDATE"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleName" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textField1"
                android:layout_width="350dp"
                android:layout_height="55dp"
                android:layout_marginTop="24dp"
                android:hint="@string/calender"
                app:helperTextTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView1">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_input_edit_text1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/white"
                    android:inputType="textPersonName|textNoSuggestions"
                    android:maxLines="1"
                    android:text="@={viewModel.dueDate}" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/calenderText"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:text="@={viewModel.dueDate}"
                android:layout_marginEnd="21dp"
                android:layout_marginBottom="155dp"
                app:layout_constraintBottom_toTopOf="@+id/doneButton"
                app:layout_constraintEnd_toStartOf="@+id/dueDate_button"
                app:layout_constraintStart_toStartOf="parent" />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:textColor="@color/black"
                android:textSize="15dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/NOTES"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textField1" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textDescription"
                android:layout_width="350dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:hint="@string/enterYourNote"
                android:maxHeight="200dp"
                app:helperTextTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.2"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/text_edit_description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/white"
                    android:inputType="textPersonName|textNoSuggestions"
                    android:maxLines="1"
                    android:text="@={viewModel.description}" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                android:id="@+id/dueDate_button"
                android:layout_width="37dp"
                android:layout_height="35dp"
                android:layout_marginTop="16dp"
                app:layout_constraintBottom_toTopOf="@+id/textField1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.024"
                app:layout_constraintStart_toEndOf="@+id/textView1"
                app:layout_constraintTop_toBottomOf="@+id/titleName"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_baseline_today_24" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/doneButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_margin="16dp"
                android:onClick="@{()-> addFragment.setTask()}"
                android:src="@drawable/ic_baseline_check_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.616"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textDescription"
                app:layout_constraintVertical_bias="0.465" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/button1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_margin="16dp"
                android:onClick="@{()-> addFragment.backtoMainFrag()}"
                android:src="@drawable/ic_baseline_cancel_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.256"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textDescription" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>