<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="110dp"
    android:layout_margin="20dp"
    app:cardElevation="5dp"
    app:cardCornerRadius="50dp"
    android:outlineSpotShadowColor="@color/Cyan_900"
    app:strokeColor="@color/Cyan_900"
    >

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="110dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/dueDate_textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="13dp"
            android:layout_marginTop="44dp"
            android:layout_marginBottom="49dp"
            android:text="@string/DueDate"
            android:textSize="12sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/title_textView"
            android:layout_width="114dp"
            android:layout_height="23dp"
            android:layout_above="@+id/desc_textView"
            android:layout_alignParentTop="true"
            android:layout_marginStart="2dp"
            android:layout_marginTop="29dp"
            android:layout_marginBottom="10dp"
            android:layout_toEndOf="@+id/title_text"
            android:text="@string/Title"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/title_text"
            android:layout_width="38dp"
            android:layout_height="25dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="86dp"
            android:layout_marginTop="25dp"
            android:layout_marginBottom="19dp"
            android:text="@string/Title"
            android:textColor="@color/Cyan_900"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/desc_textView"
            android:layout_width="220dp"
            android:layout_height="26dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="21dp"
            android:layout_marginEnd="68dp"
            android:layout_marginBottom="22dp"
            android:layout_toEndOf="@+id/dueDate_textView"
            android:maxHeight="35dp"
            android:text="@string/Description"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/isCompleted"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:layout_above="@+id/desc_textView"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="7dp"
            android:layout_marginEnd="17dp"
            android:layout_marginBottom="35dp"
            android:text= ""/>

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="-1dp"
            android:layout_marginBottom="40dp"
            android:layout_toEndOf="@+id/title_textView"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/notcompleted" />

        <ImageView
            android:id="@+id/viewInfo"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="33dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="38dp"
            android:importantForAccessibility="yes"
            android:src="@drawable/ic_baseline_arrow_forward_ios_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>




</com.google.android.material.card.MaterialCardView>





