<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
    tools:context=".addEditFragment">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textSize="15dp"
        android:textColor="@color/black"
        android:text="@string/TASKDETAILS"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />




    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleName"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:hint="enter_your_word"
        android:inputType="text"
        app:helperTextTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_edit_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:inputType="textPersonName|textNoSuggestions"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:text="@string/DUEDATE"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleName" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textField1"
        android:layout_width="350dp"
        android:layout_height="55dp"
        android:layout_marginTop="24dp"
        android:hint="Calender"
        app:helperTextTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_input_edit_text1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:inputType="textPersonName|textNoSuggestions"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:textColor="@color/black"
        android:textSize="15dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/NOTES"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textField1" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textDescription"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="Tap to Edit"
        app:helperTextTextAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        android:maxHeight="200dp"
        app:layout_constraintTop_toBottomOf="@+id/textView2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/text_edit_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:inputType="textPersonName|textNoSuggestions"
            android:maxLines="1" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="204dp"
        android:text="Done"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDescription" />

    <Button
        android:id="@+id/button1"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        style="?attr/materialButtonOutlinedStyle"
        android:layout_marginTop="27dp"
        android:text="Cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button"
        app:layout_constraintVertical_bias="0.0" />

    <CheckBox
        android:id="@+id/state"
        android:layout_width="173dp"
        android:layout_height="53dp"
        android:text="state"
        android:defaultFocusHighlightEnabled="true"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDescription" />

    <Button
        android:id="@+id/deleteButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:text="Delete"
        app:layout_constraintBottom_toTopOf="@+id/state"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDescription" />


</androidx.constraintlayout.widget.ConstraintLayout>
