<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    >

    <data>
        <variable
            name="viewModel"
            type="com.example.todolistproject.model.TaskViewModel" />

        <variable
            name="viewFragment"
            type="com.example.todolistproject.ViewFragment" />

    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ViewFragment">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_marginTop="24dp"
                android:text="@string/TASKDETAILS"
                android:textColor="@color/Cyan_900"
                android:textSize="25dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.00999999" />

            <TextView
                android:id="@+id/textViewtitle"
                android:layout_width="150dp"
                android:layout_height="29dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/pic2"
                android:text="@string/DUEDATE"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView" />

            <TextView
                android:id="@+id/text_edit_title"
                android:layout_width="175dp"
                android:layout_height="40dp"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="@{viewModel.title}"
                android:textColor="@color/black"
                android:textSize="15dp"
                app:backgroundTint="@color/Cyan_900"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textViewtitle" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/pic2"
                android:text="@string/DUEDATE"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_edit_title" />

            <TextView
                android:id="@+id/text_input_edit_text1"
                android:layout_width="175dp"
                android:layout_height="38dp"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="@{viewModel.dueDate}"
                android:textColor="@color/black"
                android:textSize="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView1" />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_marginTop="32dp"
                android:background="@drawable/pic2"
                android:text="@string/NOTES"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15dp"
                app:layout_constraintBottom_toTopOf="@+id/doneButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.05"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_edit_text1"
                app:layout_constraintVertical_bias="0.0" />


            <TextView
                android:id="@+id/textDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="45dp"
                android:autoSizeMinTextSize="100dp"
                android:minWidth="175dp"
                android:minHeight="40dp"
                android:text="@{viewModel.description}"
                android:textColor="@color/black"
                android:textSize="15dp"
                app:layout_constraintBottom_toTopOf="@+id/doneButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView2" />

            <com.google.android.material.floatingactionbutton.FloatingActionButton
                android:id="@+id/doneButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|right"
                android:layout_margin="16dp"
                android:layout_marginBottom="4dp"
                android:src="@drawable/ic_baseline_check_24"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.492"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/isPassDay"
                android:layout_width="175dp"
                android:layout_height="40dp"
                android:layout_marginStart="236dp"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="@{viewModel.passNum}"
                android:textColor="@color/black"
                android:textSize="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toEndOf="@+id/text_input_edit_text1"
                app:layout_constraintTop_toBottomOf="@+id/passed" />

            <ImageView
                android:id="@+id/editButton"
                android:layout_width="45dp"
                android:layout_height="33dp"
                android:layout_marginTop="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/isPassDay"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.804"
                app:layout_constraintStart_toEndOf="@+id/textView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:srcCompat="@drawable/ic_baseline_edit_24" />

            <TextView
                android:id="@+id/creationDate"
                android:layout_width="150dp"
                android:layout_height="29dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/pic2"
                android:text="@string/creationdate"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/editButton" />

            <TextView
                android:id="@+id/currentDate"
                android:layout_width="175dp"
                android:layout_height="40dp"
                android:layout_marginTop="32dp"
                android:gravity="center"
                android:text="@{@string/creationDay(viewModel.creationDate)}"
                android:textColor="@color/black"
                android:textSize="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/creationDate" />

            <TextView
                android:id="@+id/passed"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:layout_marginTop="32dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/pic2"
                android:text="Is Passed ? "
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="15dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/currentDate" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>